# opengl_example

cmake_project_example/: CMakeLists.txt  Dependency.cmake
cmake_project_example/src/: main.cpp
opengl_example/: CMakeLists.txt  README.md
opengl_example/shader/: simple.vs
opengl_example/src/: context.cpp  context.h  program.cpp  shader.cpp  shader.h
triangle_example/: CMakeLists.txt  Dependency.cmake
triangle_example/shader/: simple.fs  simple.vs
triangle_example/src/: common.cpp  common.h  context.cpp  context.h  main.cpp  program.h
